vector2 class added, I plan to change how velocity works

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,11 +16,15 @@ set(SOURCES
         ${CMAKE_SOURCE_DIR}/src/main.cpp
         ${CMAKE_SOURCE_DIR}/src/particle.cpp
         ${CMAKE_SOURCE_DIR}/src/particles.cpp
-        ${CMAKE_SOURCE_DIR}/src/application.cpp)
+        ${CMAKE_SOURCE_DIR}/src/application.cpp
+        ${CMAKE_SOURCE_DIR}/src/vector2.cpp
+)
 set(HEADERS
         ${CMAKE_SOURCE_DIR}/include/particle.h
         ${CMAKE_SOURCE_DIR}/include/particles.h
-        ${CMAKE_SOURCE_DIR}/include/application.h)
+        ${CMAKE_SOURCE_DIR}/include/application.h
+        ${CMAKE_SOURCE_DIR}/include/vector2.h
+)
 
 # Add the appropriate flags for Windows
 if(WIN32)
